# baltic-energy-lakehouse

./: .gitignore  README.md  pyproject.toml
src/energy_lakehouse/clients/: __init__.py  nordpool_prices.py  open_meteo.py
src/energy_lakehouse/ingestion/: ingest_prices.py  ingest_weather.py
src/energy_lakehouse/writers/: __init__.py  local_raw_json_writer.py
