[project]
name = "baltic-energy-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
